--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,33 @@
+.nav-bar {
+  display: flex;
+}
 
+.top-content {
+  display: flex;
+}
+
+.first-container {
+  display: flex;
+}
+
+.second-container {
+  display: flex;
+}
+
+.third-container {
+  display: flex;
+}
+
+.fourth-container {
+  display: flex;
+}
+
+.fifth-container {
+  display: flex;
+}
+
+.sixth-container {
+  display: flex;
+}
 
 /*# sourceMappingURL=index.css.map */
