--- a/sass/home-page.scss
+++ b/sass/home-page.scss
@@ -30,14 +30,10 @@
     display: flex;
 }
 
-@media only screen and (max-width: 800px) {
-    body {
-      background-color: green;
-    }
+@media #{$mobile} {
+    
   }
 
-@media only screen and (max-width: 500px) {
-    body {
-      background-color: lightblue;
-    }
-  } 
+@media #{$tablet} {
+
+  }
