--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,10 @@
+//Design
+    //Colors
+        //Red
+        $red: #990033;
+        //Green
+        $green: #DBFF33;
+
 
 // mobile
 $mobile: "only screen and (max-width: 500px)";
