finished makeing site look pretty

--- a/sass/home-page.scss
+++ b/sass/home-page.scss
@@ -1,10 +1,27 @@
+h1 {
+    font-size: 2.5rem;
+    font-family: $rubik-font;
+}
+
+h2 {
+    font-size: 2rem;
+    font-family: $rubik-font;
+}
+p {
+    font-size: 1.2rem;
+    font-family: $rubik-font;
+}
+ button {
+    font-family: $rubik-font;
+ }
+
 .nav-bar {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
     background-color: $red;
-    margin-bottom: 10px;
+    border-bottom: 10px solid $green;
 }
 
 .logo {
@@ -43,6 +60,8 @@
     display: flex;
     text-align: center;
     border-bottom: 5px solid $green;
+    line-height: 2.5;
+    text-align: center;
 }
 
 .second-container {
@@ -54,6 +73,8 @@
     width: 100%;
     border-bottom: 5px solid $green;
     padding-bottom: 10px;
+    line-height: 2.5;
+    text-align: center;
 }
 
 .overview-div {
@@ -83,6 +104,16 @@
     width: 100%;
     border-bottom: 5px solid $green;
     padding-bottom: 10px;
+    line-height: 2.5;
+    text-align: center;
+}
+
+.third-container button {
+    border-radius: 25px;
+    width: 30%;
+    background-color: $red;
+    color: white;
+    font-size: 1rem;
 }
 
 .third-container img {
@@ -98,7 +129,7 @@
 .volunteer-div {
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
+    align-items: center;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -112,14 +143,24 @@
     width: 100%;
     border-bottom: 5px solid $green;
     padding-bottom: 10px;
+    line-height: 2.5;
+    text-align: center;
 }
 
 .student-div {
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
+    align-items: center;
     margin-left: 5%;
     margin-right: 5%;
+}
+
+.fourth-container button {
+    border-radius: 25px;
+    width: 30%;
+    background-color: $red;
+    color: white;
+    font-size: 1rem;
 }
 
 .fourth-container img {
@@ -153,18 +194,37 @@
     border-radius: 25px;
 }
 
+.fifth-container button {
+    border-radius: 25px;
+    width: 30%;
+    background-color: $red;
+    color: white;
+    font-size: 1rem;
+}
+
 .admin-div {
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
+    align-items: center;
     margin-left: 5%;
     margin-right: 5%;
+    line-height: 2.5;
+    text-align: center;
 }
 
 .sixth-container {
     display: flex;
     text-align: center;
-    border-bottom: 5px solid $red;
+    line-height: 2.5;
+    margin-bottom: 40px;
+}
+
+.sixth-container button {
+    border-radius: 25px;
+    width:15%;
+    background-color: $red;
+    color: white;
+    font-size: 1.2rem;
 }
 
 @media #{$mobile} {
