--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -4,6 +4,8 @@
         $red: #990033;
         //Green
         $green: #DBFF33;
+    //Fonts
+        $rubik-font: 'Rubik', sans-serif;
 
 
 // mobile
