--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,83 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-family: "Rubik", sans-serif;
+}
+
+h2 {
+  font-size: 2rem;
+  font-family: "Rubik", sans-serif;
+}
+
+p {
+  font-size: 1.2rem;
+  font-family: "Rubik", sans-serif;
+}
+
+button {
+  font-family: "Rubik", sans-serif;
+}
+
 .nav-bar {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   background-color: #990033;
-  margin-bottom: 10px;
+  border-bottom: 10px solid #DBFF33;
 }
 
 .logo {
@@ -44,6 +117,8 @@
   display: flex;
   text-align: center;
   border-bottom: 5px solid #DBFF33;
+  line-height: 2.5;
+  text-align: center;
 }
 
 .second-container {
@@ -55,6 +130,8 @@
   width: 100%;
   border-bottom: 5px solid #DBFF33;
   padding-bottom: 10px;
+  line-height: 2.5;
+  text-align: center;
 }
 
 .overview-div {
@@ -84,6 +161,16 @@
   width: 100%;
   border-bottom: 5px solid #DBFF33;
   padding-bottom: 10px;
+  line-height: 2.5;
+  text-align: center;
+}
+
+.third-container button {
+  border-radius: 25px;
+  width: 30%;
+  background-color: #990033;
+  color: white;
+  font-size: 1rem;
 }
 
 .third-container img {
@@ -99,7 +186,7 @@
 .volunteer-div {
   display: flex;
   flex-flow: column wrap;
-  align-content: center;
+  align-items: center;
   margin-left: 5%;
   margin-right: 5%;
 }
@@ -113,14 +200,24 @@
   width: 100%;
   border-bottom: 5px solid #DBFF33;
   padding-bottom: 10px;
+  line-height: 2.5;
+  text-align: center;
 }
 
 .student-div {
   display: flex;
   flex-flow: column wrap;
-  align-content: center;
+  align-items: center;
   margin-left: 5%;
   margin-right: 5%;
+}
+
+.fourth-container button {
+  border-radius: 25px;
+  width: 30%;
+  background-color: #990033;
+  color: white;
+  font-size: 1rem;
 }
 
 .fourth-container img {
@@ -154,22 +251,47 @@
   border-radius: 25px;
 }
 
+.fifth-container button {
+  border-radius: 25px;
+  width: 30%;
+  background-color: #990033;
+  color: white;
+  font-size: 1rem;
+}
+
 .admin-div {
   display: flex;
   flex-flow: column wrap;
-  align-content: center;
+  align-items: center;
   margin-left: 5%;
   margin-right: 5%;
+  line-height: 2.5;
+  text-align: center;
 }
 
 .sixth-container {
   display: flex;
   text-align: center;
-  border-bottom: 5px solid #990033;
+  line-height: 2.5;
+  margin-bottom: 40px;
+}
+
+.sixth-container button {
+  border-radius: 25px;
+  width: 15%;
+  background-color: #990033;
+  color: white;
+  font-size: 1.2rem;
 }
 
 footer {
   text-align: center;
+  background-color: #990033;
+  padding: 10px;
+}
+
+footer p {
+  color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
