--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,6 @@
 @import 'reset.scss';
 @import 'variables.scss';
+@import 'nav.scss';
 @import 'home-page.scss';
 @import 'footer.scss';
+@import 'about.scss';
