--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -26,3 +26,39 @@
     text-decoration: none;
     color: white;
 }
+@media #{$mobile} {
+    .nav-bar {
+        flex-flow: column wrap;
+        align-items: center;
+        padding-bottom: 20px;
+    }
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2.5rem;
+        padding: 0%;
+        border-bottom: 2px solid $green;
+    }
+    .main-nav {
+        display: flex;
+        flex-flow: column nowrap;
+        width: 90%;
+    }
+    .main-nav a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 2%;
+        font-size: 2rem;
+        border-bottom: 2px solid $green;
+    }
+    .login a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        padding-top: 20%;
+        padding-left: 10%;
+    }
+}
