--- a/sass/home-page.scss
+++ b/sass/home-page.scss
@@ -31,6 +31,9 @@ a {
     line-height: 2.5;
     text-align: center;
 }
+.first-container p {
+    margin: 10px;
+}
 .second-container {
     margin-top: 10px;
     display: flex;
