--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -32,6 +32,23 @@ a {
     flex-flow: column wrap;
     padding: 3%;
     margin-top: 1%;
+    max-width: 33%;
+    width: 33%
+}
+.person img {
+    border-radius: 25px;
+    max-width: 100%;
+    width: 100%;
+}
+.person h2 {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+.person p {
+    padding-bottom: 5px;
+    line-height: 2.5;
+    text-align: center;
 }
 @media #{$mobile} {
     .team {
